[package]
name = "CSIPTV"
version = "1.0.0-beta.7"
description = "CSIPTV"
authors = ["4gray"]
license = "MIT"
repository = "https://github.com/cloud-saviour/csiptv"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-http = {version = "2", features = ["unsafe-headers"] }
tauri-plugin-shell = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
xmltv = "0.9"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
flate2 = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
once_cell = "1.19.0"
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
